<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meishijie</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="search">搜索</string>
    <string name="search_menu">搜索菜谱、食材</string>
    <string name="internet_search">网络搜索</string>
    <string name="local_search">本地搜索</string>
    <string name="desc">image</string>
    <string name="btn_jump">跳转到搜索页面</string>
    <string name="msj_zh">美食杰账号</string>
    <string name="no_login">未登陆</string>
    <string name="no_setting">未设定</string>
	<string name="bang_pingtai">绑定合作平台（微博/QQ/人人）</string>
	<string name="qiehuan_local_net">自动切换本地/在线模式</string>
	<string name="qiehuan_wifi">仅在wifi状态下自动切换</string>
	<string name="month_push_notify">每日推荐更新通知</string>
	<string name="data_download">数据包下载</string>
	<string name="no_load_data">2G/3G网络不加载数据</string>
	<string name="clear_cache">清除缓存</string>
	<string name="check_update">检查更新</string>
	<string name="advice_feekback">意见反馈（互动版）</string>
	<string name="about_me">关于我们</string>
	<string name="recommend_soft">软件推荐</string>
	<string name="invite_friends">邀请好友来下载</string>
	<string name="cache_size">2.0MB</string>
	<string name="setting_text">设置</string>
	<string name="login_account">账号：</string>
	<string name="login_pwd">密码：</string>
	<string name="login_nick">昵称：</string>
	<string name="pwd">密码</string>
	<string name="login_email_nick">邮箱/昵称</string>
	<string name="login_string">登录</string>
	<string name="weibo_account_login">新浪微博账号登陆</string>
	<string name="qq_login">QQ账号登陆</string>
	<string name="renren_login">人人网账号登陆</string>
	<string name="login_msj">登录美食杰</string>
	<string name="reg_msj">注册美食杰</string>
	<string name="download_now">下载</string>
	<string name="data_download_now">数据包下载</string>
	<string name="search">搜索</string>
    <string name="search_menu">搜索菜谱、食材</string>
    <string name="internet">网络</string>
    <string name="local">本地</string>
    <string name="internet_search">网络搜索</string>
    <string name="local_search">本地搜索</string>
    <string name="desc">image</string>
    <string name="hour_pop">每小时最热菜谱</string>
    <string name="week_top">本周top50</string>
    <string name="tudou">土豆</string>
    <string name="doufu">豆腐</string>
    <string name="zhuxiaopai">猪小排</string>
    <string name="jidan">鸡蛋</string>
    <string name="niurou">牛肉</string>
    <string name="qiezi">茄子</string>
    <string name="nandu">按难度</string>
    <string name="gongyi">按工艺</string>
    <string name="kouwei">按口味</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多......</string>
    <string name="release_to_refresh">松开即可刷新...</string>
    <string name="refreshing">加载中…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">11</string>
</resources>
