<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <!-- 表格布局 -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <!-- 表格布局：第一行 -->

        <TableRow
            android:id="@+id/msj_account_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:gravity="right"
            android:background="@drawable/shape_top_corner_no_bottom_line" >

            <TextView
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/msj_zh"
                android:textColor="@color/gray">
            </TextView>

            <TextView
                android:id="@+id/msj_account"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:gravity="right|center_vertical"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="3sp"
                android:text="@string/no_login"
                android:drawableRight="@drawable/small_arrow"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </TableRow>
        <!-- 表格布局：第二行 -->

        <TableRow
            android:id="@+id/binding_third_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_bottom_corner_no_top_line">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/bang_pingtai"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/not_login_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/not_login_arrow"
                android:src="@drawable/small_arrow" />
        </TableRow>
    </TableLayout>
    
     <!-- 表格布局 -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <!-- 表格布局：第一行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:gravity="right"
            android:background="@drawable/shape_top_corner_no_bottom_line" >

            <TextView
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/qiehuan_local_net"
                android:textColor="@color/gray">
            </TextView>

            <ImageView
                android:id="@+id/local_network"
                android:contentDescription="@+id/local_network"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:gravity="right|center_vertical"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/locker_open" />
        </TableRow>
        <!-- 表格布局：第二行 -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_bottom_corner_no_top_line">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/qiehuan_wifi"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/wifi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/locker_open" />
        </TableRow>
    </TableLayout>
    
    
     <!-- 表格布局 -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <!-- 表格布局：第一行 -->

        <TableRow
            android:id="@+id/push_info_everyday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:gravity="right"
            android:background="@drawable/shape_top_corner_no_bottom_line" >

            <TextView
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/month_push_notify"
                android:textColor="@color/gray">
            </TextView>

            <TextView
                android:id="@+id/push_notify_info"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:gravity="right|center_vertical"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="3sp"
                android:text="@string/no_setting"
                android:drawableRight="@drawable/small_arrow"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </TableRow>
        <!-- 表格布局：第二行 -->

        <TableRow
            android:id="@+id/data_packet_download"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/data_download"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/download_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
        
         <!-- 表格布局：第三行 -->

        <TableRow
            android:id="@+id/not_load_data_in_two_three"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/no_load_data"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/not_load_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
        
         <!-- 表格布局：第四行 -->

        <TableRow
            android:id="@+id/clear_cache_all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/clear_cache"
                android:textColor="@color/gray"/>

             <TextView
                 android:id="@+id/clear_all_cache"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:gravity="right|center_vertical"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="3sp"
                android:text="@string/cache_size"
                android:drawableRight="@drawable/small_arrow"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </TableRow>
        
         <!-- 表格布局：第五行 -->

        <TableRow
            android:id="@+id/check_out_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/check_update"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/check_update_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
        
         <!-- 表格布局：第六行 -->

        <TableRow
            android:id="@+id/advice_feed_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/advice_feekback"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/advice_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
        
         <!-- 表格布局：第七行 -->

        <TableRow
            android:id="@+id/about_me_all_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/about_me"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/abount_me_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
        
         <!-- 表格布局：第八行 -->

        <TableRow
            android:id="@+id/soft_recommend_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_no_corner_without_bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/recommend_soft"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/soft_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
        
         <!-- 表格布局：第九行 -->

        <TableRow
            android:id="@+id/invite_friends_download"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" 
            android:gravity="right"
            android:background="@drawable/shape_bottom_corner_no_top_line">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/invite_friends"
                android:textColor="@color/gray"/>

            <ImageView
                android:id="@+id/invite_friends_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@+id/wifi_status"
                android:src="@drawable/small_arrow" />
        </TableRow>
    </TableLayout>

</LinearLayout>
