<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="95.0dip"
    android:orientation="vertical"
    android:paddingLeft="12.0dip"
    android:paddingRight="12.0dip"
    android:paddingTop="12.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/hour_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95.0dip"
                android:background="@drawable/top_288x184"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_width="150dip"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/search_topbar"
                android:gravity="center_horizontal"
                android:text="@string/hour_pop" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/week_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="95.0dip"
                android:background="@drawable/top_288x184"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_width="150dip"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/search_topbar"
                android:gravity="center_horizontal"
                android:text="@string/week_top" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>